my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/simd-5.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/simd-5.c:49:7: error: call to undeclared library function 'memcmp' with type 'int (const void *, const void *, __size_t)' (aka 'int (const void *, const void *, unsigned long)'); ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   49 |   if (memcmp (&w1, &w3, sizeof (Q)) != 0)
      |       ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/simd-5.c:49:7: note: include the header <string.h> or explicitly provide a declaration for 'memcmp'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/simd-5.c:50:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   50 |     abort ();
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/simd-5.c:50:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
2 errors generated.
